--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
+
 {
   "name": "marketcycling",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.js",  
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "nodemon ./src/app.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
