--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
-
 {
   "name": "marketcycling",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",  
+  "main": "./src/app.js",
   "scripts": {
-    "start": "nodemon ./src/app.js",  
+    "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +19,7 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "mocha": "^10.4.0",
     "nodemon": "^3.1.0"
   }
 }
