--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon ./src/app.js",
-    "test": "mocha"
+    "test": "nodemon"
   },
   "keywords": [],
   "author": "",
