--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "apicarro",
+  "name": "marketcycling",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server,js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
