--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon ./src/server,js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +15,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mysql": "^2.18.1"
+    "express": "^5.0.0-alpha.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.7"
   }
 }
