--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "marketcycling",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./src/app.js",
+    "start": "nodemon src/index.js",
     "test": "nodemon"
   },
   "keywords": [],
