--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "nodemon"
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,18 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "@babel/register": "^7.23.7",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "sinon": "^17.0.1"
-  }
+  },
+  
+    "jest": {
+      "transform": {
+        "^.+\\.jsx?$": "babel-jest"
+      }
+    }
+  
 }
