--- a/marketcycling/app.json
+++ b/marketcycling/app.json
@@ -14,6 +14,9 @@
           "origin": "https://n"
         }
       ]
-    ]
+    ],
+    "android": {
+      "package": "com.marketcycling"
+    }
   }
 }
