--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "dotenv": "^16.4.5",
     "expo": "^51.0.16",
     "express": "^4.19.2",
+    "metro": "~0.80.8",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.7",
-    "metro": "~0.80.8"
+    "mysql2": "^3.9.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
